# time-list

./: Dockerfile.backend  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  dashboard.rs  entry.rs  mod.rs  project.rs  subtask.rs  task.rs  timer.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: dashboard.rs  entry.rs  mod.rs  project.rs  subtask.rs  task.rs  user.rs
frontend-nuxt/: dist
frontend-nuxt/components/: TaskCard.vue  TaskDetailDrawer.vue
frontend-nuxt/layouts/: default.vue
frontend-nuxt/middleware/: auth.global.js
frontend-nuxt/pages/: admin.vue  change-password.vue  index.vue  login.vue  profile.vue  projects.vue  register.vue  reports.vue  tasks.vue
frontend-nuxt/pages/admin/: index.vue  tasks.vue  time-report.vue
frontend-nuxt/plugins/: auth.js
frontend-nuxt/stores/: auth.js  taskStore.js
